# test

./: .gitignore  README.md  oracle-cloud-systemd.service.example  pyproject.toml  run_bot.py
src/crypto_ai_bot/: __init__.py  bot.py  cli.py  config.py  demo.py  exchange.py  indicators.py  risk.py  strategy.py
tests/: test_bot.py
