[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-ai-bot"
version = "0.1.0"
description = "AI-assisted crypto trading bot with risk management and paper trading mode."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
live = [
    "ccxt>=4.3",
]
ai = [
    "scikit-learn>=1.3",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
crypto-ai-bot = "crypto_ai_bot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
